# zenrube-mcp

./: .coverage  .zenrube.yml  =1.3  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST  PROGRESS.md  README.md  demo_fs_agent.py  fly.toml  fs_agent_plan.json  http_server.py  mcp_fetch_setup_todo.md  mcp_setup_todo.md  package-lock.json  pyproject.toml  repo_tree.txt  requirements-dev.txt  requirements.txt  server.py  test_version_manager.py  todo_embeddings_progress.md  zenrube_changelog.json
.github/workflows/: ci.yml
data/: embeddings_config_example.json  embeddings_index.json
examples/: basic-usage.md  hosted-demo.md
src/: zenrube.py
src/zenrube/: __init__.py  cli.py  config.py  experts.py  models.py  providers.py
src/zenrube/experts/: __init__.py  autopublisher.py
src/zenrube_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_autopublisher_expert.py  test_chatgpt_fs_agent.py  test_cli.py  test_expert_registry.py  test_full_system_integration.py  test_personality_system.py  test_supporting_modules.py  test_zenrube.py
zenrube/: __init__.py  cache.py  config.py  providers.py
zenrube/agent_runtime/: fs_loop.py  fs_relay.py  fsl
zenrube/experts/: __init__.py  autopublisher.py  chatgpt_fs_agent.py  data_cleaner.py  expert_registry.py  publisher.py  rube_adapter.py  semantic_router.py  summarizer.py  team_council.py  version_manager.py
zenrube/http/: fs_agent_server.py
zenrube/orchestration/: council_runner.py
zenrube/profiles/: personality_engine.py  personality_presets.py  personality_safety.py  profile_controller.py
